// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionButtons/> should render the action buttons if isEditing is set to false 1`] = `
<div>
  <div
    class="actionButtons"
  >
    <div
      class="ui-multibutton-group-3397"
      style="display: flex;"
    >
      <button
        aria-disabled="false"
        class="ui-button-wrapper-cef1 actionButton ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
        type="button"
      >
        <span
          class="ui-button-content-cef1"
        >
          I am in snapshots
        </span>
      </button>
      <button
        aria-disabled="false"
        class="ui-button-wrapper-cef1 actionButton ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
        type="button"
      >
        <span
          class="ui-button-content-cef1"
        >
          I am in snapshots too
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<ActionButtons/> should render the editor if isEditing is set to true  1`] = `
<ul
  class="editList"
>
  <li
    class="editRow"
  >
    <button
      aria-disabled="false"
      class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
      type="button"
    >
      <span
        class="ui-button-content-cef1"
      >
        I am in snapshots
      </span>
    </button>
    <span
      class="customActionEditIcons"
    >
      <i
        class="material-icons"
      >
        edit
      </i>
      <i
        class="material-icons text-danger"
      >
        delete
      </i>
    </span>
  </li>
  <li
    class="editRow"
  >
    <button
      aria-disabled="false"
      class="ui-button-wrapper-cef1 ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
      type="button"
    >
      <span
        class="ui-button-content-cef1"
      >
        I am in snapshots too
      </span>
    </button>
    <span
      class="customActionEditIcons"
    >
      <i
        class="material-icons"
      >
        edit
      </i>
      <i
        class="material-icons text-danger"
      >
        delete
      </i>
    </span>
  </li>
</ul>
`;
